INCLUDE_DIRECTORIES(${PKMDS_SOURCE_DIR}/include)

ADD_EXECUTABLE(pkmds-iv-marker main.cpp)
IF(CMAKE_COMPILER_IS_GNUCXX)
    #Needed for scoped enums
    SET_TARGET_PROPERTIES(pkmds-iv-marker PROPERTIES COMPILE_FLAGS "-std=c++0x")
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    SET_TARGET_PROPERTIES(pkmds-iv-marker PROPERTIES COMPILE_FLAGS "-std=c++11")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)
TARGET_LINK_LIBRARIES(pkmds-iv-marker pkmds)

INSTALL(TARGETS pkmds-iv-marker RUNTIME DESTINATION ${RUNTIME_DIR} COMPONENT Runtime)
